--- a/src/components/UserComponent/tab.css
+++ b/src/components/UserComponent/tab.css
@@ -1,10 +1,12 @@
 button {
+  width: 150px;
   padding: 1rem 2rem;
   border: none;
   font-size: 1rem;
   font-weight: 700;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #9fa7b3;
-  text-align: center;
+  align-items: start;
   cursor: pointer;
 }
 
@@ -15,11 +17,40 @@ button:hover {
 }
 
 
-.tab {
-
-  position: fixed;
+button[type="submit"]:hover {
+  background-color: rgb(149, 84, 156);
+  color: #e3e8f1;
+  transition: 0.7s;
 }
 
+
+
+
+.tab-buttons {
+  place-items: center;
+  border: none;
+  background-color: #E1DEF0;
+  align-items: flex-start;
+}
+
+
+
+.tab {
+  background-color: #E1DEF0;
+  width: 11rem;
+}
+
+
+.tabs {
+  width: 300px;
+  height: 300px;
+  background-color: #E1DEF0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
 
 .active {
   background-color: rgb(107, 111, 158);
@@ -33,4 +64,24 @@ button:hover {
 
 .inactive {
   background-color: rgb(253, 253, 253);
+}
+
+.input {
+
+  margin: 2px;
+  padding: 2px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.input:focus {
+  outline-color: rgb(128, 137, 240)
+}
+
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+  width: 200px;
+  background-color: #E1DEF0;
+  align-items: center;
 }
