--- a/src/components/UserComponent/tab.css
+++ b/src/components/UserComponent/tab.css
@@ -16,21 +16,34 @@ button:hover {
   transition: 0.15s;
 }
 
+button[type="submit"] {
+  width: 100%;
+  /* Ensures the button takes the full width of the form */
+  padding: 1rem 2rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #9fa7b3;
+  align-items: start;
+  cursor: pointer;
+  margin-top: 10px;
+  /* Adjust margin as needed */
+}
 
 button[type="submit"]:hover {
   background-color: rgb(149, 84, 156);
   color: #e3e8f1;
   transition: 0.7s;
+
 }
-
-
-
 
 .tab-buttons {
   place-items: center;
   border: none;
   background-color: #E1DEF0;
   align-items: flex-start;
+
 }
 
 
