--- a/src/components/UserComponent/tab.css
+++ b/src/components/UserComponent/tab.css
@@ -38,6 +38,14 @@ button[type="submit"]:hover {
 
 }
 
+h5 {
+  color: #92979b;
+  padding: 2px;
+  margin: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
 .tab-buttons {
   place-items: center;
   border: none;
@@ -56,7 +64,7 @@ button[type="submit"]:hover {
 
 .tabs {
   width: 300px;
-  height: 300px;
+  height: 320px;
   background-color: #E1DEF0;
   display: flex;
   flex-direction: column;
